--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.2",
+    "swing": "^3.1.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-swing": "0.0.9",
+    "vue-swipe": "^2.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
