--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.2",
     "mongoose": "^5.0.9",
     "morgan": "^1.9.0",
-    "nodemon": "^1.17.1"
+    "nodemon": "^1.17.1",
+    "vue-swing": "0.0.9"
   }
 }
