added main page routing + calendar, import function.

--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,9 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-swing": "0.0.9",
-    "vue-swipe": "^2.3.0"
+    "vue-swipe": "^2.3.0",
+    "vue-xls-csv-parser": "0.0.21",
+    "vuejs-datepicker": "^0.9.29"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
